# mizan-subnet

./: .gitignore  README.md  pyproject.toml
contracts/: EpochManager.sol  IntegrityRegistry.sol  PolicyRegistry.sol  foundry.toml
docs/: architecture.md  for_regulators.md  integration_guide.md  subnet_economics.md  threat_model.md  zk_design.md
issuer/ledger/: example_ledger.json
issuer/merkle/: build_tree.ts
issuer/prove/: generate_proof.ts
issuer/submit/: submit_epoch.ts
subnet/common/: __init__.py  policies.py  scoring.py  types.py
subnet/miner/: __init__.py  miner.py
subnet/validator/: __init__.py  validator.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/app/docs/[slug]/: page.tsx
web/app/epoch/[n]/: page.tsx
web/app/issuer/[id]/: page.tsx
web/app/policies/: page.tsx
web/components/: DocViewer.tsx  EpochTimeline.tsx  Header.tsx  IntegrityScoreCard.tsx  MinerRankingTable.tsx  StatsGrid.tsx
web/lib/: bittensor.ts  contracts.ts  doc-content.ts
zk/: package-lock.json  package.json
zk/circuits/: epoch.circom  risk_bounds.circom  solvency.circom  supply.circom
zk/proofs/: prove.ts
zk/verifier/: export_verifier.ts
zk/witness/: generate_witness.ts
