[project]
name = "mizan-subnet"
version = "0.1.0"
description = "ZK Stablecoin Integrity Subnet for Bittensor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bittensor>=6.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "web3>=6.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["subnet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
